[tool.poetry]
name = "disclog"
version = "0.2.0"
description = "A tool for adding logging through discord."
authors = ["Anshuman Dash <ansdash2@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
discord-py = "^2.4.0"
python-dotenv = "^1.0.1"
toml = "^0.10.2"
flask = {extras = ["async"], version = "^3.0.3"}
quart = "^0.19.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
